--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title:Welcome to my new page!
+description:Feel free to book mark this is to keep an eye on project updates
